bin/testsuite/tests/compiler/src/errors/compiler5533.swg
#global testerror "Err0468"

func toto(str: string, x: cvarargs)
{
    else
}